--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,1 +1,9 @@
 @charset "UTF-8";
+
+/*** WebFont ***/
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
+
+/*** Common ***/
+*:not(.icon) {
+    font-family: "M PLUS 1p", sans-serif !important;
+}
