Add checklogin.php, Update many changes
[checklogin.php]
バックエンドでのバリデーションチェック機能の追加
[index.php]
ログイン用ページの追加
ユーザ向けページの追加
[checksignup.php]
細かな修正
[signup.php]
アイコンの追加
細かな修正
[config.php]
Origin Trialsトークンやサイト名, ロゴイメージ設定の追加
細かな修正
[header.php]
Origin Trials用メタタグの追加
[main.css]
readonly属性とrequired属性を共存させるModの追加
細かなデザインの追加

--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -3,7 +3,20 @@
 /*** WebFont ***/
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
 
+/*** CSSMod ***/
+input[readonly-mod] {
+    pointer-events: none;
+}
+
 /*** Common ***/
 *:not(.icon) {
     font-family: "M PLUS 1p", sans-serif !important;
+}
+
+body > .grid {
+    height: 100%;
+}
+
+.column {
+    max-width: 500px;
 }
